main menu update

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     </header>
 <section>
     <h1>Main page</h1>
+    <h2>Welcome</h2>
 </section>
     <script src="header.js"></script>
 </body>
