--- a/Game of numbers/games of numbers.html
+++ b/Game of numbers/games of numbers.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./header/header.css">
-    <link rel="stylesheet" href="./todo list/todo-list.css">
+    <link rel="stylesheet" href="../header/header.css">
 
     <link rel="shortcut icon"
         href="https://www.candyicons.com/style-image-examples/abstract-uYcg0JhhxK7bQ54KOtzsLX9U.png"
         type="image/x-icon">
-    <title>Main menu</title>
+    <title>games of numbres</title>
 </head>
 
 <body>
@@ -25,10 +24,7 @@
         <a href="./jokes/jokes.html" class="dropdown-link">Jokes</a>
         <a href="./weather/weather.html" class="dropdown-link">Weather app</a>
         <a href="./stopwatch/stopwatch.html" class="dropdown-link">Stopwatch</a>
-        <a href="./ counter button/counter button.html" class="dropdown-link">Counter button</a>
-        <a href="./Game of numbers/games of numbers.html" class="dropdown-link">Game of numbers</a>
 
-        
     </div >
         <input type="text" placeholder="Search...">
         <img id="dark-mode" src="https://img.icons8.com/?size=100&id=20489&format=png&color=000000" alt="">
@@ -46,10 +42,12 @@
 
     </header>
 <section>
-    <h1>Main page</h1>
-    <h2>Welcome</h2>
+    <h1>Guess the Number (1-100)</h1>
+<input type="number" id="guess" placeholder="Your Guess">
+<button id="submit">Submit</button>
+<p id="result"></p>
 </section>
-    <script src="header.js"></script>
+    <script src="games of numbres.js"></script>
 </body>
 
 </html>
