--- a/jokes/jokes.html
+++ b/jokes/jokes.html
@@ -15,8 +15,6 @@
 </head>
 <body>
     <header>
-
-
         <a href="../index.html"><img id="logo"
             src="https://www.candyicons.com/style-image-examples/abstract-uYcg0JhhxK7bQ54KOtzsLX9U.png"
             alt=""></a>
@@ -25,6 +23,8 @@
         <a href="../jokes/jokes.html" class="dropdown-link">Jokes</a>
         <a href="../weather/weather.html" class="dropdown-link">Weather app</a>
         <a href="../stopwatch/stopwatch.html" class="dropdown-link">Stopwatch</a>
+        <a href="../Game of numbers/games of numbers.html" class="dropdown-link">Guess the number</a>
+        <a href="../ counter button/counter button.html" class="dropdown-link">Counter button</a>
 
     </div >
         <input type="text" placeholder="Search...">
@@ -38,9 +38,6 @@
                 Log in
             </button>
         </div>
-   
-
-
     </header>
     <section class="joke-section">
         <h1>Jokes page</h1>
