--- a/ counter button/counter button.html
+++ b/ counter button/counter button.html
@@ -16,7 +16,9 @@
         <a href="../todo list/todo list.html" class="dropdown-link">Todo list</a>
         <a href="../jokes/jokes.html" class="dropdown-link">Jokes</a>
         <a href="../weather/weather.html" class="dropdown-link">Weather app</a>
-        <a href="./stopwatch.html" class="dropdown-link">Stopwatch</a>
+        <a href="../stopwatch/stopwatch.html" class="dropdown-link">Stopwatch</a>
+        <a href="../Game of numbers/games of numbers.html" class="dropdown-link">Guess the number</a>
+        <a href="counter button.html" class="dropdown-link">Counter button</a>
 
     </div >
         <input type="text" placeholder="Search...">
@@ -30,9 +32,6 @@
                 Log in
             </button>
         </div>
-   
-
-
     </header>
     <main>
     <div style="width: fit-content; font-size: 20px;" class="counter" id="counter">0</div>
