--- a/Game of numbers/games of numbers.html
+++ b/Game of numbers/games of numbers.html
@@ -14,16 +14,16 @@
 
 <body>
     <header>
-
-
-        <a href="#"><img id="logo"
+        <a href="../index.html"><img id="logo"
             src="https://www.candyicons.com/style-image-examples/abstract-uYcg0JhhxK7bQ54KOtzsLX9U.png"
             alt=""></a>
             <div class= "header-div">
-        <a href="./todo list/todo list.html" class="dropdown-link">Todo list</a>
-        <a href="./jokes/jokes.html" class="dropdown-link">Jokes</a>
-        <a href="./weather/weather.html" class="dropdown-link">Weather app</a>
-        <a href="./stopwatch/stopwatch.html" class="dropdown-link">Stopwatch</a>
+        <a href="../todo list/todo list.html" class="dropdown-link">Todo list</a>
+        <a href="../jokes/jokes.html" class="dropdown-link">Jokes</a>
+        <a href="../weather/weather.html" class="dropdown-link">Weather app</a>
+        <a href="../stopwatch/stopwatch.html" class="dropdown-link">Stopwatch</a>
+        <a href="games of numbers.html" class="dropdown-link">Guess the number</a>
+        <a href="../ counter button/counter button.html" class="dropdown-link">Counter button</a>
 
     </div >
         <input type="text" placeholder="Search...">
@@ -37,9 +37,6 @@
                 Log in
             </button>
         </div>
-   
-
-
     </header>
 <section>
     <h1>Guess the Number (1-100)</h1>
