--- a/weather/weather.html
+++ b/weather/weather.html
@@ -15,16 +15,16 @@
 </head>
 <body>
     <header>
-
-
         <a href="../index.html"><img id="logo"
             src="https://www.candyicons.com/style-image-examples/abstract-uYcg0JhhxK7bQ54KOtzsLX9U.png"
             alt=""></a>
             <div class= "header-div">
         <a href="../todo list/todo list.html" class="dropdown-link">Todo list</a>
         <a href="../jokes/jokes.html" class="dropdown-link">Jokes</a>
-        <a href="weather.html" class="dropdown-link">Weather app</a>
+        <a href="weather.html"class="dropdown-link">Weather app</a>
         <a href="../stopwatch/stopwatch.html" class="dropdown-link">Stopwatch</a>
+        <a href="../Game of numbers/games of numbers.html" class="dropdown-link">Guess the number</a>
+        <a href="../ counter button/counter button.html" class="dropdown-link">Counter button</a>
 
     </div >
         <input type="text" placeholder="Search...">
