--- a/ counter button/counter button.html
+++ b/ counter button/counter button.html
@@ -33,11 +33,11 @@
             </button>
         </div>
     </header>
-    <main>
-    <div style="width: fit-content; font-size: 20px;" class="counter" id="counter">0</div>
+    <section>
+    <p class="counter" id="counter">0</p>
     <button id="counterButton">click me</button>
 
-    </main>
+    </section>
 
     <script src="counter button.js"></script>
     <script src="../header/header.js"></script>
