--- a/Game of numbers/games of numbers.html
+++ b/Game of numbers/games of numbers.html
@@ -38,7 +38,7 @@
             </button>
         </div>
     </header>
-<section>
+<section class="">
     <h1>Guess the Number (1-100)</h1>
 <input type="number" id="guess" placeholder="Your Guess">
 <button id="submit">Submit</button>
