--- a/stopwatch/stopwatch.html
+++ b/stopwatch/stopwatch.html
@@ -33,14 +33,14 @@
             </button>
         </div>
     </header>
-    <main>
+    <section>
     <div class="timer" id="timer"></div>
     <button id="resetButton">Reset Timer</button>
     <button id="stopButton">stop</button>
     <button id="resumeButton">resume</button>
 
 
-    </main>
+    </section>
 
     <script src="stopwatch.js"></script>
     <script src="../header/header.js"></script>
