--- a/ counter button/counter button.html
+++ b/ counter button/counter button.html
@@ -19,6 +19,7 @@
         <a href="../stopwatch/stopwatch.html" class="dropdown-link">Stopwatch</a>
         <a href="../Game of numbers/games of numbers.html" class="dropdown-link">Guess the number</a>
         <a href="counter button.html" class="dropdown-link">Counter button</a>
+        <a href="../quiz /quiz.html" class="dropdown-link">Quiz</a>
 
     </div >
         <input type="text" placeholder="Search...">
