--- a/Game of numbers/games of numbers.html
+++ b/Game of numbers/games of numbers.html
@@ -24,6 +24,7 @@
         <a href="../stopwatch/stopwatch.html" class="dropdown-link">Stopwatch</a>
         <a href="games of numbers.html" class="dropdown-link">Guess the number</a>
         <a href="../ counter button/counter button.html" class="dropdown-link">Counter button</a>
+        <a href="../quiz /quiz.html" class="dropdown-link">Quiz</a>
 
     </div >
         <input type="text" placeholder="Search...">
