--- a/stopwatch/stopwatch.html
+++ b/stopwatch/stopwatch.html
@@ -19,6 +19,7 @@
         <a href="stopwatch/stopwatch.html" class="dropdown-link">Stopwatch</a>
         <a href="../Game of numbers/games of numbers.html" class="dropdown-link">Guess the number</a>
         <a href="../ counter button/counter button.html" class="dropdown-link">Counter button</a>
+        <a href="../quiz /quiz.html" class="dropdown-link">Quiz</a>
 
     </div >
         <input type="text" placeholder="Search...">
@@ -34,10 +35,12 @@
         </div>
     </header>
     <section>
-    <div class="timer" id="timer"></div>
+    <div class="timer" id="timer"></div><p> seconds since you are in the website</p>
+    <div class="container">
     <button id="resetButton">Reset Timer</button>
     <button id="stopButton">stop</button>
     <button id="resumeButton">resume</button>
+</div>
 
 
     </section>
