Update traffic and quiz

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <a href="./Game of numbers/games of numbers.html" class="dropdown-link">Game of numbers</a>
             <a href="./ counter button/counter button.html" class="dropdown-link">Counter button</a>
             <a href="./quiz /quiz.html" class="dropdown-link">Quiz</a>
+            <a href="./traffic lights/traffic.html" class="dropdown-link">Quiz</a>
 
 
 
