--- a/traffic lights/traffic.html
+++ b/traffic lights/traffic.html
@@ -5,29 +5,27 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="quiz.css">
+    <link rel="stylesheet" href="traffic.css">
     <link rel="stylesheet" href="../header/header.css">
 
     <link rel="shortcut icon"
         href="https://www.candyicons.com/style-image-examples/abstract-uYcg0JhhxK7bQ54KOtzsLX9U.png"
         type="image/x-icon">
-    <title>Quiz</title>
+    <title>traffic light</title>
 </head>
 <body>
-
     <header>
         <a href="../index.html"><img id="logo"
             src="https://www.candyicons.com/style-image-examples/abstract-uYcg0JhhxK7bQ54KOtzsLX9U.png"
             alt=""></a>
             <div class= "header-div">
-        <a href="../todo list/todo list.html" class="dropdown-link">Todo list</a>
+        <a href="todo list.html" class="dropdown-link">Todo list</a>
         <a href="../jokes/jokes.html" class="dropdown-link">Jokes</a>
         <a href="../weather/weather.html" class="dropdown-link">Weather app</a>
         <a href="../stopwatch/stopwatch.html" class="dropdown-link">Stopwatch</a>
         <a href="../Game of numbers/games of numbers.html" class="dropdown-link">Guess the number</a>
         <a href="../ counter button/counter button.html" class="dropdown-link">Counter button</a>
-        <a href="quiz.html" class="dropdown-link">Quiz</a>
-
+        <a href="../quiz /quiz.html" class="dropdown-link">Quiz</a>
 
     </div >
         <input type="text" placeholder="Search...">
@@ -43,20 +41,14 @@
         </div>
     </header>
 
-    <section>
-
-        <h1>Quiz App</h1>
-        <div id="main-question">question</div>
-        <div class="options">
-            <button class="option-button"></button>
-            <button class="option-button"></button>
-            <button class="option-button"></button>
-            <button class="option-button"></button>
-        </div>
-        <button id="next-question">Next question</button>
+    <section >
+        <div class="traffic-light">
+            <div id="redLight" class="light red"></div>
+            <div id="yellowLight" class="light yellow"></div>
+            <div id="greenLight" class="light green"></div>
+            </div>
     </section>
-
-<script src="quiz.js"></script>
+<script src="traffic.js"></script>
 <script src="../header/header.js"></script>
 </body>
 </html>
